--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,6 +14,7 @@
       <span class='actions'>
         <%= edit_icon(article) %>
         <%= delete_icon(article) %>
+        <div class="like-article"></div>
       </span>
       <%= pluralize article.comments.count, "Comment" %>
     </li>
