Add likes controller and routes, sync client/server data

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,7 +14,7 @@
       <span class='actions'>
         <%= edit_icon(article) %>
         <%= delete_icon(article) %>
-        <div class="like-article" data-initial-is-liked="<%= article.liked %>"></div>
+        <div class="like-article" data-article-id="<%= article.id %>" data-initial-is-liked="<%= article.liked %>"></div>
       </span>
       <%= pluralize article.comments.count, "Comment" %>
     </li>
